--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </ul>
             </div>
         </header>
-        <img src="banner.jpg" id="banner">
+        <img src="assets/banner.jpg" id="banner">
         <div class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
             <p>Localizada no coração da cidade, a <strong>Barbearia Alura</strong> traz para o mercado o que há
@@ -39,7 +39,7 @@
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
 
-            <img src="beneficios.jpg" class="imagembeneficios">
+            <img src="assets/beneficios.jpg" class="imagembeneficios">
         </div>
 
     </body>
