--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="cabecalho">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="assets/logo.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -56,7 +56,7 @@
         </main>
 
         <footer>
-            <img src="logo-branco.png">
+            <img src="assets/logo-branco.png">
             <p class="copyright">&copy; Copyright - Barbearia Alura - 2021</p>
         </footer>
     </body>
